// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Cell /> renders correctly 1`] = `
<div
  className="cPTRnX"
/>
`;

exports[`<Cell /> renders correctly with gutter 1`] = `
<div
  className="KhGhY"
/>
`;

exports[`<Cell /> renders correctly with width 1`] = `
<div
  className="cPTRnX"
  width={0.5}
/>
`;
